[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.4"
atoi = "2.0.0"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false

[[bench]]
name = "day3"
harness = false

[[bench]]
name = "day4"
harness = false

[[bench]]
name = "day5"
harness = false

[[bench]]
name = "day6"
harness = false

[[bench]]
name = "day7"
harness = false

[[bench]]
name = "day8"
harness = false

[[bench]]
name = "day9"
harness = false

[[bench]]
name = "day10"
harness = false

[[bench]]
name = "day11"
harness = false

[[bench]]
name = "day15"
harness = false
